hphp/hack/test/typecheck/shape_idx5.php.exp
File "shape_idx5.php", line 12, characters 19-21:
Invalid argument (Typing[4140])
File "shape_idx5.php", line 11, characters 15-15:
The field 'y' is missing
